Preview Extension architecture implemented. Built-in preview extension for image file types (jpg, png, bmp, tif etc.) Built-in preview extension for text file types (txt, cs, xml, json, etc) Built-in preview extension for pdf files (.pdf)

--- a/FileExplorer/Properties/Resources.resx
+++ b/FileExplorer/Properties/Resources.resx
@@ -646,4 +646,7 @@
   <data name="StaticTaskbarTitle" xml:space="preserve">
     <value>Static Taskbar Title</value>
   </data>
+  <data name="NoPreviewAvailable" xml:space="preserve">
+    <value>There are no preview extensions registered for this file type</value>
+  </data>
 </root>
