Changing DateTime format support added.

--- a/FileExplorer/Properties/Resources.de.resx
+++ b/FileExplorer/Properties/Resources.de.resx
@@ -717,4 +717,7 @@
   <data name="NoUpdateAvailable" xml:space="preserve">
     <value>Derzeit sind keine Updates verfügbar</value>
   </data>
+  <data name="DateTimeFormat" xml:space="preserve">
+    <value>Datums- und Uhrzeitformat</value>
+  </data>
 </root>
