Save Last Session feature is added.

--- a/FileExplorer/Properties/Resources.de.resx
+++ b/FileExplorer/Properties/Resources.de.resx
@@ -720,4 +720,7 @@
   <data name="DateTimeFormat" xml:space="preserve">
     <value>Datums- und Uhrzeitformat</value>
   </data>
+  <data name="SaveSession" xml:space="preserve">
+    <value>Sitzung beim Schließen speichern</value>
+  </data>
 </root>
