--- a/FileExplorer/Properties/Resources.tr.resx
+++ b/FileExplorer/Properties/Resources.tr.resx
@@ -579,6 +579,9 @@
   <data name="SaveLayout" xml:space="preserve">
     <value>Düzeni Kaydet</value>
   </data>
+  <data name="SaveSession" xml:space="preserve">
+    <value>Kapatırken Oturumu Kaydet</value>
+  </data>
   <data name="SearchFilter" xml:space="preserve">
     <value>Ara &amp; Filtrele</value>
   </data>
