--- a/FileExplorer/Properties/Resources.resx
+++ b/FileExplorer/Properties/Resources.resx
@@ -734,7 +734,7 @@
   </data>
   <data name="HelpSearchWithEverything" xml:space="preserve">
     <value>Everything is a freeware desktop search utility for Windows that can rapidly find files and folders by name.
-In order this option to be active, Everything (installed or portable version) must be up and running.</value>
+In order this option to be active, Everything (installed or portable version) should be up and running.</value>
   </data>
   <data name="HelpAddToStartup" xml:space="preserve">
     <value>FileExplorer is added to Windows startup, making the application launch much faster.</value>
